public/stylesheets/style.scss
//GENERAL--------------------------------------GENERAL//

@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900);



//LANDING-----------------------------------------LANDING//


// h1 {
//   color: #a9adb2;
//   font-family: 'Montserrat', sans-serif;
//   font-weight: 700;
//   font-size: 70px;
//   text-align: center;
// }

.index-title {
  color: #a9adb2;
  font-family: 'Montserrat', sans-serif;
  font-weight: 600;
  font-size: 50px;
  padding-top: 20px;
  padding-bottom: 10px;
  text-align: center;
}

.date-input, .carBookBtn {
  text-align: center;
  padding-top: 10px;
}




//CALENDAR--------------------------------------------------CALENDAR//


/* Overall body and content */
body { 
  height: 100%;
  width: 100%;
  margin: 0;
  background: rgb(255, 255, 255);    
  // background: -webkit-linear-gradient(left, #363795, #005C97);
  // background: -moz-linear-gradient(left, #363795, #005C97);
  // background: -o-linear-gradient(left, #363795, #005C97);
  // background: linear-gradient(to right, #363795, #005C97); 
  font-family: 'Montserrat';
} 
.content {
  overflow: none;
  max-width: 790px;
  padding: 0px 0;
  height: 500px;
  position: relative;
  margin: 20px auto;
  background: #a21e4d;
  background: -moz-linear-gradient(right,  #a21e4d 0%, #b54b71 80%, #b54b71 100%);
  background: -webkit-linear-gradient(right,  #a21e4d 0%, #b54b71 80%, #b54b71 100%);
  background: linear-gradient(to left,  #a21e4d 0%, #b54b71 80%, #b54b71 100%);    
  border-radius: 3px;
  box-shadow: 3px 8px 16px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
  -moz-box-shadow: 3px 8px 16px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
  -webkit-box-shadow: 3px 8px 16px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}

/*  Events display */
.events-container {
  overflow-y: scroll;
  // height: 100%;
  float: right;
  margin: 0px auto; 
  font: 13px Helvetica, Arial, sans-serif; 
  display: inline-block; 
  padding: 0 10px;
  border-bottom-right-radius: 3px;
  border-top-right-radius: 3px;
}
.events-container:after{
  clear:both;
}
.event-card {
  padding: 20px 0;
  width: 350px;
  margin: 20px auto;
  display: block;
  background: #fff;
  border-left: 10px solid #a21e4d;
  border-radius: 3px;
  box-shadow: 3px 8px 16px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
  -moz-box-shadow: 3px 8px 16px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
  -webkit-box-shadow: 3px 8px 16px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}

.booking-card {
  padding: 20px 0;
  width: 300px;
  margin: 20px auto;
  display: block;
  background: #fff;
  border-left: 10px solid #a21e4d;
  border-radius: 3px;
  box-shadow: 3px 8px 16px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
  -moz-box-shadow: 3px 8px 16px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
  -webkit-box-shadow: 3px 8px 16px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}


.event-count, .event-name, .event-cancelled {
  display: inline;
  padding: 0 10px;
  font-size: 1rem;
}
.event-count {
  color: #a21e4d;
  text-align: right;
}
.event-name {
  padding-right:0;
  text-align: left;
}
.event-cancelled {
  color: #FF1744;
  text-align: right;
}

/*  Calendar wrapper */
.calendar-container  { 
  float: left;
  position: relative;
  margin: 0px auto; 
  height: 100%;
  background: #fff;
  font: 13px Helvetica, Arial, san-serif; 
  display: inline-block; 
  border-bottom-left-radius: 3px;
  border-top-left-radius: 3px;
}
.calendar-container:after{
  clear:both;
}
.calendar {
  display: table;
}

/* Calendar Header */
.year-header { 
  background: #a21e4d;
  background: -moz-linear-gradient(left,  #a21e4d 0%, #b54b71 80%, #b54b71 100%);
  background: -webkit-linear-gradient(left,  #a21e4d 0%, #b54b71 80%, #b54b71 100%);
  background: linear-gradient(to right,  #a21e4d 0%, #b54b71 80%, #b54b71 100%);     
  font-family: Helvetica;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
  -moz-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
  -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
  height: 40px; 
  text-align: center;
  position: relative; 
  color:#fff; 
  border-top-left-radius: 3px;
} 
.year-header span { 
  display:inline-block; 
  font-size: 20px;
  line-height:40px; 
}
.left-button, .right-button { 
  cursor: pointer;
  width:28px; 
  text-align:center; 
  position:absolute; 
} 
.left-button { 
  left:0; 
  -webkit-border-top-left-radius: 5px; 
  -moz-border-radius-topleft: 5px; 
  border-top-left-radius: 5px; 
} 
.right-button { 
  right:0; 
  top:0; 
  -webkit-border-top-right-radius: 5px; 
  -moz-border-radius-topright: 5px; 
  border-top-right-radius: 5px; 
} 
.left-button:hover {
  background: #3FADFF;
}
.right-button:hover { 
  background: #00C1FF;
}

/* Buttons */
.button{
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  font-size: 1rem;
  border-radius: 25px;
  padding: 0.65rem 1.9rem;
  transition: .2s ease all;
  color: white;
  border: none;
  box-shadow: -1px 10px 20px #e797b5;
  background: #a21e4d;
  background: -moz-linear-gradient(left,  #a21e4d 0%, #b54b71 80%, #b54b71 100%);
  background: -webkit-linear-gradient(left,  #a21e4d 0%, #b54b71 80%, #b54b71 100%);
  background: linear-gradient(to right,  #a21e4d 0%, #b54b71 80%, #b54b71 100%); 
}
#cancel-button {
  box-shadow: -1px 10px 20px #FF7DAE;
  background: #FF1744;
  background: -moz-linear-gradient(left,  #FF1744 0%, #FF5D95 80%, #FF5D95 100%);
  background: -webkit-linear-gradient(left,  #FF1744 0%, #FF5D95 80%, #FF5D95 100%);
  background: linear-gradient(to right,  #FF1744 0%, #FF5D95 80%, #FF5D95 100%);
}
#add-button {
  display: block;
  position: absolute;
  right:20px;
  bottom: 20px;
}
#add-button:hover, #ok-button:hover, #cancel-button:hover {
  transform: scale(1.03);
}
#add-button:active, #ok-button:active, #cancel-button:active {
  transform: translateY(3px) scale(.97);
}

/* Days/months tables */
.days-table, .dates-table, .months-table { 
  border-collapse:separate; 
  text-align: center;
} 
.day { 
  height: 26px;
  width: 26px;
  padding: 0 10px;
  line-height: 26px; 
  border: 2px solid transparent;
  text-transform:uppercase; 
  font-size:90%; 
  color:#9e9e9e; 
} 
.month {
  cursor: default;
  height: 26px;
  width: 26px;
  padding: 0 2px;
  padding-top:10px;
  line-height: 26px; 
  text-transform:uppercase; 
  font-size: 11px; 
  color:#9e9e9e; 
  transition: all 250ms;
}
.active-month {
  font-weight: bold;
  font-size: 14px;
  color: #FF1744;
  text-shadow: 0 1px 4px RGBA(255, 50, 120, .8);
}
.month:hover {
  color: #FF1744;
  text-shadow: 0 1px 4px RGBA(255, 50, 120, .8);
}

/*  Dates table */
.table-date {
  cursor: default;
  color:#2b2b2b; 
  height:26px;
  width: 26px;
  font-size: 15px;
  padding: 10px;
  line-height:26px; 
  text-align:center; 
  border-radius: 50%;
  border: 2px solid transparent;
  transition: all 250ms;
}
.table-date:not(.nil):hover { 
  border-color: #a9adb2;
  box-shadow: 0 2px 6px RGBA(255, 50, 120, .9);
}
.event-date {
  border-color:#52A0FD;
  box-shadow: 0 2px 8px RGBA(130, 180, 255, .9);
}
.active-date{ 
  background: #a9adb2;
  box-shadow: 0 2px 8px RGBA(255, 50, 120, .9);
  color: #fff;
}
.event-date.active-date {
  background: #52A0FD;
  box-shadow: 0 2px 8px RGBA(130, 180, 255, .9);
}

/* input dialog */
.dialog{
  z-index: 5;
  background: #fff;
  position:absolute;
  width:415px;
  height: 500px;
  left:387px;
  border-top-right-radius:3px;
  border-bottom-right-radius: 3px;
  display:none;
  border-left: 1px #aaa solid;
}
.dialog-header {
  margin: 20px;
  color:#333;
  text-align: center;
}
.form-container {
  margin-top:25%;
}
.form-label {
  color:#333;
}
.input {
  border:none;
  background: none;
  border-bottom: 1px #aaa solid;
  display:block;
  margin-bottom:50px;
  width: 200px;
  height: 20px;
  text-align: center;
  transition: border-color 250ms;
}
.input:focus {
  outline:none;
  border-color: #00C9FB;
}
.error-input {
  border-color: #FF1744;
}

/*----------------BOOKING FORM ---------------*/

input[type=date]{
  text-align: left;
}
.mapouter{position:relative;text-align:right;width:100%;height:auto;}
.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:auto;}
iframe#gmap_canvas { width: 100%; height:auto;}





/*--------Media Querys-----*/

/* Tablets and smaller */
@media only screen and (max-width: 780px) {
  .content {
      overflow: visible;
      position:relative;
      max-width: 100%;
      width: 370px;
      height: 100%;
      background: #52A0FD;
      background: -moz-linear-gradient(left,  #52A0FD 0%, #00C9FB 80%, #00C9FB 100%);
      background: -webkit-linear-gradient(left,  #52A0FD 0%, #00C9FB 80%, #00C9FB 100%);
      background: linear-gradient(to right,  #52A0FD 0%, #00C9FB 80%, #00C9FB 100%);  
  }
  .dialog {
      width:370px;
      height: 450px;
      border-radius: 3px;
      top:0;
      left:0;
  }
  .events-container {
      float:none;
      overflow: visible;
      margin: 0 auto;
      padding: 0;
      display: block;
      left: 0;
      border-radius: 3px;
  }

  .calendar-container {
      float: none;
      padding: 0;
      margin: 0 auto;
      margin-right: 0;
      display: block;
      left: 0;
      border-radius: 3px;
      box-shadow: 3px 8px 16px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
      -moz-box-shadow: 3px 8px 16px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
      -webkit-box-shadow: 3px 8px 16px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
  }
}

/* Small phone screens */
@media only screen and (max-width: 400px) {
  .content, .events-container, .year-header, .calendar-container {
      width: 320px;
  }
  .dialog {
      width: 320px;
  }
  .months-table {
      display: block;
      margin: 0 auto;
      width: 320px;
  }
  .event-card {
      width: 300px;
  }
  .day {
      padding: 0 7px;
  }
  .month {
      display: inline-block;
      padding: 10px 10px;
      font-size: .8rem;
  }
  .table-date {
      width: 20px;
      height: 20px;
      line-height: 20px;
  }
  .event-name, .event-count, .event-cancelled {
      font-size: .8rem;
  }
  .add-button{
      bottom: 10px;
      right: 10px;
      padding: 0.5rem 1.5rem;
  }
} 

/*----------------Reservation LIst ---------------*/

.card a{
 color: #a9adb2;
}

.card {
  width: 450px;
  height: 250px;
  background-color: #fff;
  background: linear-gradient(#f8f8f8, #fff);
  box-shadow: 0 8px 16px -8px rgba(0, 0, 0, 0.4);
  border-radius: 6px;
  overflow: hidden;
  position: relative;
  margin: 1.5rem; }

.card h1 {
  text-align: center; 
  font-size: 20px;}

.card .card-body {
  position: absolute;
  width: 150px;
  height: 100%;
  background: #a42451;
 }

 .level {
  top: 15%;
  color: #fff;
  text-transform: uppercase;
  font-size: 0.75em;
  font-weight: bold;
  background: rgba(0, 0, 0, 0.15);
  padding: 0.115rem 0.60rem;
  border-radius: 100px;
  white-space: nowrap;
 }


.stats {
  font-size: 2rem;
  display: flex;
  flex-direction: column;
  left: 1rem;
  right: 1rem;
  top: auto;
  color: #fff; 
  text-align: center; }


  .stats_x {
    font-size: 2rem;
    display:inline-block;
    width:100%;}

  .stats_x div{
    font-size: 1.5rem;
    font-weight: bold;
    width:50%;
    display: inline-block;
  }

.stats div.title {
  font-size: 0.75rem;
  font-weight: bold;
  text-transform: uppercase; }

.stats div.title_x {
    color: #a42451;
    font-size: 0.75rem;
  }

.stats div.value {
  font-size: 1.5rem;
  font-weight: bold;}


.stats div.value_x {
    font-size: 1.5rem;
    font-weight: bold;
    color: #a42451;
 }
  
.general {
  color:  #a9adb2;
  width: 300px;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  box-sizing: border-box;
  padding: 1rem;
  padding-top: 0; 
  font-size: 15px;
}


  /*----------------Check In and Out ---------------*/

